--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
   </head>
-  <body >
-    <div id="app" class="bg-base-200"></div>
+  <body class="antialiased bg-white dark:bg-slate-900  text-slate-500 dark:text-slate-400">
+    <div id="app" ></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+<style>
+
+</style>
 </html>
