--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en" class="dark bg-gray-100 dark:bg-slate-900 ">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
   </head>
-  <body class="bg-gray-100 dark:bg-slate-900  text-slate-500 dark:text-slate-400 ">
+  <body>
     <div id="app" class="min-h-full"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
